hphp/hack/test/typecheck/fc_enum_case_3.php.exp
ERROR: File "fc_enum_case_3.php", line 11, characters 3-54:
This `switch` statement is nonexhaustive. At least the following cases are missing: `Bar::BAR`, `Bar::BAZ` (Typing[4019])
  File "fc_enum_case_3.php", line 11, characters 11-12:
  The scrutinee has type `Bar`.
